# virtual-lab

./: .gitignore  README.md  agent.py  chat.py  constants.py  convert_discussion.py  display_discussion.py  emerald_instrumentation_short_7.3.24.txt  prompts.py  pyproject.toml  requirements.txt  run_antibodies.ipynb  run_antibody_design.ipynb  run_drug_discovery.ipynb  run_individual_meeting.py  run_meeting.py  run_nanobody_design.ipynb  run_project.ipynb  run_project.py  run_scientific_meeting.py  utils.py
antibody_design/: requirements-antibody.txt
antibody_design/alphafold/: discussion_1.json  discussion_2.json  discussion_2.md  discussion_3.json  discussion_5.json  discussion_5.md  merged.md
antibody_design/esm/: discussion_1.md  discussion_2.md  discussion_3.json  discussion_3.md  (+4 more)
drug_discovery/: README.md  run_drug_discovery.ipynb
llm-interpretability /: finetune_agents.ipynb  interpretability_constants.py  llm-interpretability-design.ipynb  llm_interpretability_design.ipynb
nanobody_design/: README.md  ablations.ipynb  finetune_agents.ipynb  human_eval.ipynb  install_localcolabfold.sh  nanobody_constants.py  plot_results.ipynb  plot_results_improved.ipynb  plot_results_workflow_1.ipynb  plot_results_workflow_2.ipynb  requirements_nanobody_design.txt  requirements_nanobody_design_frozen.txt  run_nanobody_design.ipynb  run_nanobody_design_1.ipynb  run_nanobody_design_2.ipynb  run_nanobody_design_reviews.ipynb  workflow.md  workflow_1.md  workflow_2.md
scripts/: antibody_design.xml  design_antibodies.py  run_esm.py  run_rosetta.py  score_antibodies.py
(+2937 files in other folders)
